<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu"
        android:icon="@drawable/appmenu"
        android:title="menu"
        app:showAsAction="always" >
        <menu android:background="#0077B6B2">
            <item android:id="@+id/about"
                android:title="@string/acerca_de"
                android:icon="@drawable/information"
                app:showAsAction="withText|ifRoom"/>
            <item android:id="@+id/Settings"
                android:title="@string/ajustes"
                android:icon="@drawable/settings"
                app:showAsAction="withText|ifRoom"/>
            <item android:id="@+id/LogOut"
                android:title="@string/cerrar_sesion"
                android:icon="@drawable/logout"
                app:showAsAction="withText|ifRoom"/>

        </menu>
    </item>
</menu>